--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit
 tensorflow==2.18.0
-keras==2.18.0
+keras
 scikit-learn
 scipy
 opencv-python
@@ -8,3 +8,4 @@ requests
 streamlit-lottie
 pillow 
 numpy
+
